--- a/skandal/index.html
+++ b/skandal/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>justpaste.it | 10 Skandal Line </title>
+  <title>justpaste.it | 10 Skandal Atmin Lineee </title>
   <style>
     body {
       background-color: white;
@@ -118,7 +118,7 @@
     <p>Feb 2, 2024</p>
   </div>
 
-  <h4>10 skandal besar atmin IMPHNEN</h4>
+  <h4>10 skandal besar atmin LINEEE</h4>
   <button id="btn" onclick="pl()">https://www.terabox.com/wap/share/filelist?surl=_lRq-zDk8oadzxQhsGgwbHWBAyGyGYIKIHHGvagTYauOJKLJHYBBhhHgajsilmgOJAcTZLfQ</button>
   <pre id="ascii"></pre>
   <audio id="rickRollAudio">
