--- a/skandal/index.html
+++ b/skandal/index.html
@@ -110,12 +110,12 @@
       <p>.it</p>
     </div>
   </nav>
-  <h5>waduh</h5>
+  <h5>SKANDAL</h5>
   <div class="acc">
     <img src="pp.png">
-    <p>Bandartikus</p>
-    <p>@bandar</p>
-    <p>Feb 2, 2024</p>
+    <p>WedangCore</p>
+    <p>@wedangcore</p>
+    <p>Jan 14, 2025</p>
   </div>
 
   <h4>10 skandal besar atmin LINEEE</h4>
